Multiple lint fixes