@@ -176,7 +176,7 @@ public class BPMNExecution extends Controller{
 			List<HistoricTaskService> hts = new TaskServiceRest()
 					.getHistoryOfProccessInstanceId(task.getProcessInstanceId());
 			hts = hts.stream().filter(h -> !h.getTaskDefinitionKey().equals(task.getTaskDefinitionKey()))
-					.collect(Collectors.toList());
+					.toList();
 			String previewTask = !hts.isEmpty() ? hts.get(hts.size() - 1).getTaskDefinitionKey() : "";
 			String preiviewProcessDefinition = !hts.isEmpty()
 					? hts.get(hts.size() - 1).getProcessDefinitionId()
